--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,11 +11,14 @@ body {
   font-size: 16px;
   font-family: "p22-underground", sans-serif;
   font-weight: 300;
-  background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='32' height='32' patternTransform='scale(2) rotate(0)'><rect x='0' y='0' width='100%' height='100%' fill='hsla(0,0%,100%,1)'/><path d='M40 16h-6m-4 0h-6m8 8v-6m0-4V8M8 16H2m-4 0h-6m8 8v-6m0-4V8'  stroke-linejoin='round' stroke-linecap='round' stroke-width='0.5' stroke='hsla(66, 70%, 54%, 0.49)' fill='none'/><path d='M16-8v6m0 4v6m8-8h-6m-4 0H8m8 24v6m0 4v6m8-8h-6m-4 0H8'  stroke-linejoin='round' stroke-linecap='round' stroke-width='0.5' stroke='hsla(33, 90%, 65%, 0.49)' fill='none'/></pattern></defs><rect width='800%' height='800%' transform='translate(0,0)' fill='url(%23a)'/></svg>");
+  background-color: white;
 }
 
 body header {
   width: 100%;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -23,24 +26,11 @@ body header {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-}
-
-body header a.logo {
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
-}
-
-body header a.logo img {
-  width: 12rem;
-  margin: auto;
+  position: relative;
 }
 
 body header nav {
-  position: relative;
+  position: fixed;
   width: inherit;
   -ms-flex-pack: distribute;
       justify-content: space-around;
@@ -51,6 +41,21 @@ body header nav {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+}
+
+body header nav a.logo {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  padding-left: 2rem;
+}
+
+body header nav a.logo img {
+  width: 12rem;
+  margin: auto;
 }
 
 body header nav ul {
@@ -67,6 +72,7 @@ body header nav ul li {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
+  padding-right: 2rem;
 }
 
 body header nav ul li a {
@@ -77,7 +83,7 @@ body header nav ul li a:link {
   text-decoration: none;
 }
 
-body header nav .social-icons {
+body header nav .social-icon {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -85,13 +91,25 @@ body header nav .social-icons {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  position: absolute;
-  top: 0rem;
-  right: 0rem;
+  padding-right: 2rem;
 }
 
-body header nav .social-icons a:link {
+body header nav .social-icon a.linkedin-icon {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  margin: auto;
+}
+
+body header nav .social-icon a.linkedin-icon:link {
   text-decoration: none;
+}
+
+body header nav .social-icon a.linkedin-icon img {
+  width: 4rem;
 }
 
 body section.intro {
@@ -113,8 +131,101 @@ body section.intro .intro-text h1 {
   font-size: 2rem;
 }
 
+body section.skills-list {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+}
+
+body section.skills-list .skill {
+  width: 100%;
+}
+
+body section.skills-list .skill img {
+  max-width: 10rem;
+}
+
+body section.skills-list ul {
+  list-style: none;
+}
+
+body section.skills-list ul li {
+  list-style: none;
+}
+
 body section.highlights h2 {
   font-family: "rama-gothic-m", sans-serif;
   font-size: 2rem;
+  text-align: center;
+}
+
+body section.highlights .work-gallery {
+  padding: 1rem;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  -ms-grid-rows: (20rem)[1];
+      grid-template-rows: repeat(1, 20rem);
+  grid-gap: 1rem;
+}
+
+body section.highlights .work-gallery .gallery__item {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+body footer {
+  width: 100%;
+}
+
+body footer .footer-logo {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+}
+
+body footer .footer-logo img {
+  width: 8rem;
+}
+
+body footer .lower-footer-sect {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+body footer .lower-footer-sect ul li {
+  list-style: none;
+}
+
+body footer .lower-footer-sect form {
+  display: inherit;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 /*# sourceMappingURL=style.css.map */
