--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -3,6 +3,10 @@
 $logo-font: 'rama-gothic-m', sans-serif;
 $body-font: 'p22-underground', sans-serif;
 
+$breakpoints: (phone: 425px,
+                tablet: 750px,
+                desktop: 1024px) !default;
+
 *{
     margin: 0;
     body: 0;
@@ -27,6 +31,10 @@ body{
             justify-content: space-around;
             display: flex;
             flex-direction: row;
+            a:hover{
+                background-color: lawngreen;
+                cursor: pointer;
+            }
             a.logo{
                 width: max-content;
                 height: max-content;
@@ -78,6 +86,7 @@ body{
         .intro-image{
             width: 30rem;
             margin: auto;
+            padding-top: 3rem;
         }
         .intro-text{
             h1{
@@ -94,10 +103,20 @@ body{
         justify-content: center;
         text-align: center;
         .skill{
-            width: 100%;
+            width: 50%;
+            margin: auto;
             img{
                 max-width: 10rem;
             }
+        }
+        .skills-one{
+            text-align: left;
+        }
+        .skills-two{
+            text-align: right;
+        }
+        .skills-three{
+            text-align: left;
         }
         ul{
             list-style: none;
@@ -146,6 +165,79 @@ body{
             }
             form{
                 display: inherit;
+                flex-direction: column;
+            }
+        }
+    }
+}
+
+@media (min-width: 319px) and (max-width: 450px) {
+    body{
+        width: 100%;
+        header{
+            nav{
+                flex-direction: column;
+            }
+        }
+        section.intro{
+            height: 75vh;
+            .intro-image{
+                width: 90%;
+                padding-top: 10rem;
+            }
+        }
+        section.skills-list{
+            height: 100vh;
+            .skill{
+                width: 90%;
+            }
+            .skills-one, .skills-two, .skills-three{
+                text-align: center;
+            }
+        }
+        section.highlights{
+            height: max-content;
+            .work-gallery{
+                grid-template-columns: 1fr;
+            }
+        }
+        footer{
+            .lower-footer-sect{
+                flex-direction: column;
+            }
+        }
+    }
+}
+
+@media (min-width: 451px) and (max-width: 775px){
+    body{
+        width: 100%;
+        header{
+            nav{
+                flex-direction: column;
+            }
+        }
+        section.intro{
+            height: 75vh;
+            img.intro-image{
+                width: 90%;
+            }
+        }
+        section.skills-list{
+            height: 100vh;
+        }
+        section.highlights{
+            height: max-content;
+            .work-gallery{
+                grid-template-columns: 1fr 1fr;
+            }
+        }
+        footer{
+            a.footer-logo{
+                margin: auto;
+                text-align: center;
+            }
+            .lower-footer-sect{
                 flex-direction: column;
             }
         }
