--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -135,16 +135,22 @@ body{
             font-size: 2rem;
             text-align: center;
         }
-        .work-gallery{
+        div.work-gallery{
             padding: 1rem;
             display: grid;
             grid-template-columns: repeat(4, 1fr);
             grid-template-rows: repeat(1, 20rem);
             grid-gap: 1rem;
-            .gallery__item{
+            max-height: 20rem;
+            figure.gallery__item{
                 width: 100%;
                 height: 100%;
-                object-fit: cover;
+                a{
+                    height: 100%;
+                    img{
+                        height: 100%;
+                    }
+                }
             }
         }
     }
