--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -49,17 +49,14 @@ body header nav a:hover {
 }
 
 body header nav a.logo {
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
-  padding-left: 2rem;
+  width: 100%;
+  height: 3rem;
+  -ms-grid-column-align: center;
+      justify-self: center;
 }
 
 body header nav a.logo img {
-  width: 12rem;
+  width: 18rem;
   margin: auto;
 }
 
@@ -134,8 +131,6 @@ body section.intro .intro-image {
   aspect-ratio: 1 / 1;
   -o-object-fit: cover;
      object-fit: cover;
-  -webkit-clip-path: url(#mask);
-          clip-path: url(#mask);
 }
 
 body section.intro .pattern-test {
