--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -36,11 +36,11 @@ body{
                 cursor: pointer;
             }
             a.logo{
-                width: max-content;
-                height: max-content;
-                padding-left: 2rem;
+                width: 100%;
+                height: 3rem;
+                justify-self: center;
                 img{
-                    width: 12rem;
+                    width: 18rem;
                     margin: auto;
                 }
             }
@@ -90,7 +90,6 @@ body{
             justify-self: center;
             aspect-ratio: 1 / 1;
             object-fit: cover;
-            clip-path: url(#mask);
         }
         .pattern-test{
             width: 20rem;
