Update Layout and create new comps

--- a/src/stylesheets/layout.module.css
+++ b/src/stylesheets/layout.module.css
@@ -10,6 +10,12 @@
     color: seagreen;
 }
 
+.logo {
+    width: 100%;
+    height: 3rem;
+    justify-self: center;
+}
+
 .navLinks{
     list-style: none;
     width: inherit;
