--- a/src/stylesheets/layout.module.css
+++ b/src/stylesheets/layout.module.css
@@ -1,11 +1,11 @@
 @import url("https://use.typekit.net/quc8gpf.css");
 /* Color Theme Swatches in Hex
-BERRY           #A64D79     hsla(330, 36, 47, 1)
-PINK            #ECD2FA     hsla(279, 80, 90, 1)
-DARK NAVY       #0D2740     hsla(209, 66, 15, 1)
-NAVY            #1E5B94     hsla(208, 66, 34, 1)
-BB BLUE         #E9F4FF     hsla(209, 100, 95, 1)
-OFF WHITE       #F2F2F2     hsla(0, 0, 94, 1)
+BERRY           #A64D79     hsl(330, 36%, 47%)
+PINK            #ECD2FA     hsl(279, 80%, 90%)
+DARK NAVY       #0D2740     hsl(209, 66%, 15%)
+NAVY            #1E5B94     hsl(208, 66%, 34%)
+BB BLUE         #E9F4FF     hsl(209, 100%, 95%)
+OFF WHITE       #F2F2F2     hsl(0, 0%, 94%)
 */
 
 *{
@@ -17,17 +17,19 @@ OFF WHITE       #F2F2F2     hsla(0, 0, 94, 1)
 .container{
     margin: auto;
     width: 100%;
-    font-family: kings-caslon, sans-serif;
+    font-family: garamond-premier-pro-display, serif;
+    font-weight: 300;
     font-style: normal;
     font-size: 18px;
 }
 
 h1, h2, h3, h4{
     font-family: rama-gothic-m, sans-serif;
+    color: hsl(208, 66%, 34%);
 }
 
 h1{
-    font-weight: 700;
+    font-weight: 900;
     font-style: normal;
 }
 h2{
@@ -35,10 +37,6 @@ h2{
     font-style: normal;
 }
 h3{
-    font-weight: 400;
-    font-style: normal;
-}
-h4{
     font-weight: 300;
     font-style: normal;
 }
@@ -53,7 +51,7 @@ nav{
     z-index: 25;
     display: flex;
     justify-content: space-evenly;
-    align-items: flex-end;
+    align-items: center;
     position: fixed;
 }
 
@@ -68,7 +66,7 @@ nav{
 .navLinkText{
     list-style: none;
     text-decoration: none;
-    color: hsla(209, 100, 95, 1);
+    color: hsl(208, 66%, 34%);
     font-family: rama-gothic-m, sans-serif;
     font-weight: 600;
     font-size: 2rem;
@@ -76,12 +74,12 @@ nav{
     padding: 0 2rem;
 }
 
-.navLinkText::visited{
-    color: hsla(209, 100, 95, 1);
+.navLinkText:hover{
+    color: hsl(279, 80%, 90%);
 }
 
 .activeLink{
-    color: hsla(279, 80, 90, 1);
+    color: hsl(330, 36%, 47%);
 }
 
 .introArch{
