--- a/src/stylesheets/footer.module.css
+++ b/src/stylesheets/footer.module.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: row;
     width: 100%;
+    height: 15vh;
+    background-color: hsl(209, 66%, 15%);
 }
 
 .footerLogo {
@@ -9,6 +11,7 @@
     max-height: 5rem;
     height: 12rem;
     justify-self: center;
+    padding: 1rem;
 }
 
 .logo{
@@ -18,26 +21,36 @@
 
 .footerLinks{
     list-style: none;
-    width: max-content;
-    justify-content: flex-start;
+    width: 70%;
+    justify-content: space-between;
+    align-items: center;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 
 .footerLinkItem {
     width: max-content;
     list-style: none;
-    font-weight: 800;
-    align-self: left;
-    padding-right: 2rem;
 }
 
 .footerLinkText{
     list-style: none;
+    font-size: 1.5rem;
     text-decoration: none;
-    color: black;
+    font-family: rama-gothic-m, sans-serif;
+    color: hsl(209, 100%, 95%);
 }
 
 .copyright{
     font-family: rama-gothic-m, sans-serif;
+    position: fixed;
+    bottom: 1rem;
+    right: 5%;
+    color: hsl(209, 100%, 95%);
+    text-align: center;
+}
+
+.copyrightLink{
+    color: pink;
+    text-decoration: none;
 }
