--- a/src/stylesheets/homeIntro.module.css
+++ b/src/stylesheets/homeIntro.module.css
@@ -12,7 +12,7 @@
     background-blend-mode: screen;
     background-position: center;
     background-size: cover;
-    background-image: url("../assets/images/congress-lawn.jpg");
+    background-image: url("../images/congress-lawn.jpg");
 }
 
 h1{
